--- a/help/release-notes/2023/july-2023.md
+++ b/help/release-notes/2023/july-2023.md
@@ -1,7 +1,9 @@
 ---
 title: Notas de versão da Adobe Experience Platform
 description: As notas de versão de julho de 2023 para o Adobe Experience Platform.
-source-git-commit: 24b8fb795f4cdd9ad35c5bba4b005b14d800ed7e
+hide: true
+hidefromtoc: true
+source-git-commit: 61247a5cac0f00a4163007fd693d3a0b0efc23ab
 workflow-type: tm+mt
 source-wordcount: '659'
 ht-degree: 33%
