Updated by task 'AutomatedMDTask_1690489200196_TM-MT_1690489316322'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/41b76a6fea08c68e6e92084dbdea683d252c21fe

--- a/help/release-notes/2023/july-2023.md
+++ b/help/release-notes/2023/july-2023.md
@@ -1,10 +1,10 @@
 ---
 title: Notas de versão da Adobe Experience Platform
 description: As notas de versão de julho de 2023 para o Adobe Experience Platform.
-source-git-commit: 4064c4a7f855fa065c711df5d02d6b7982cc7627
+source-git-commit: 261729515ba25f20cd9606d378a3ec39471ee2cb
 workflow-type: tm+mt
-source-wordcount: '659'
-ht-degree: 33%
+source-wordcount: '1061'
+ht-degree: 28%
 
 ---
 
@@ -16,6 +16,7 @@ Atualizações dos recursos já existentes na Adobe Experience Platform:
 
 - [Coleção de dados](#data-collection)
 - [Preparação de dados](#data-prep)
+- [Destinos](#data-prep)
 - [Serviço de segmentação](#segmentation)
 - [Fontes](#sources)
 
@@ -47,6 +48,49 @@ A preparação de dados permite que os engenheiros de dados mapeiem, transformem
 {style="table-layout:auto"}
 
 Para obter mais informações sobre a preparação de dados, leia a [Visão geral da preparação de dados](../../data-prep/home.md).
+
+## Destinos {#destinations}
+
+[!DNL Destinations] são integrações pré-construídas com plataformas de destino que permitem a ativação perfeita de dados da Adobe Experience Platform. É possível usar destinos para ativar seus dados conhecidos e desconhecidos para campanhas de marketing entre canais, campanhas de email, publicidade direcionada e muitos outros casos de uso.
+
+**Destinos novos ou atualizados** {#new-updated-destinations}
+
+<!--
+
+LiveRamp commented out until it is officially released tomorrow
+
+| [[!DNL LiveRamp - Onboarding]](../../destinations/catalog/advertising/liveramp-onboarding.md) | New | Onboard identities from Adobe Experience Platform into [!DNL LiveRamp Connect] so that you can target users on mobile, open web, social, and [!DNL CTV] platforms, using the [!DNL Ramp ID] identifier. |
+
+-->
+
+| Destino | Novo ou atualizado | Descrição |
+| ----------- |----------------|----------- |
+| [[!DNL Azure Data Lake Storage Gen2]](../../destinations/catalog/cloud-storage/adls-gen2.md) | Novo | Criar uma conexão de saída ativa com o [!DNL Azure Data Lake Storage Gen2] para exportar arquivos de dados do Adobe Experience Platform periodicamente para seu próprio local de armazenamento. Esse novo destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]{type=Informative} |
+| [[!DNL Data Landing Zone]](../../destinations/catalog/cloud-storage/data-landing-zone.md) | Novo | [!DNL Data Landing Zone] é um [!DNL Azure Blob] interface de armazenamento de dados provisionada pela Adobe Experience Platform, que concede acesso a um recurso seguro de armazenamento de arquivos baseado em nuvem para exportar arquivos da plataforma. Esse novo destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]{type=Informative} |
+| [[!DNL Google Cloud Storage]](../../destinations/catalog/cloud-storage/google-cloud-storage.md) | Novo | Criar uma conexão de saída ativa com o [!DNL Google Cloud Storage] para exportar arquivos de dados do Adobe Experience Platform periodicamente para seus próprios buckets. Esse novo destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]{type=Informative} |
+| [[!DNL Amazon S3] update](../../destinations/catalog/cloud-storage/amazon-s3.md#changelog) | Atualização dos pacotes   | Com essa atualização, o destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]{type=Informative} |
+| [[!DNL Azure Blob] update](../../destinations/catalog/cloud-storage/azure-blob.md#changelog) | Atualização dos pacotes   | Com essa atualização, o destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]{type=Informative} |
+| [[!DNL SFTP] update](../../destinations/catalog/cloud-storage/sftp.md#changelog) | Atualização dos pacotes   | Com essa atualização, o destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]{type=Informative} |
+| Conexão com o [[!DNL Adobe Campaign Managed Services] ](../../destinations/catalog/email-marketing/adobe-campaign-managed-services.md) | Atualização dos pacotes   | A variável [!DNL Adobe Campaign Managed Services] a integração do com o Adobe Experience Platform agora oferece suporte a diferentes tipos de sincronização de público-alvo. Use o controle Selecionar tipo de sincronização para determinar se você deve exportar públicos para o Adobe Campaign ou se os públicos-alvo e seus atributos de perfil. <br> ![Novo Seletor do tipo de sincronização de seleção realçado.](/help/release-notes/2023/assets/acms-destination-export-type.png "Novo Seletor do tipo de sincronização de seleção realçado."){width="100" zoomable="yes"} |
+
+{style="table-layout:auto"}
+
+**Funcionalidades novas ou atualizadas** {#destinations-new-updated-functionality}
+
+A versão de atualização e disponibilidade geral dos seis destinos de armazenamento na nuvem acima fornece a seguinte funcionalidade:
+
+- Adicional [opções de nomenclatura de arquivo](/help/destinations/ui/activate-batch-profile-destinations.md#scheduling).
+- Capacidade de definir cabeçalhos de arquivos personalizados em seus arquivos exportados por meio da [etapa de mapeamento aprimorada](/help/destinations/ui/activate-batch-profile-destinations.md#mapping).
+- Capacidade de personalizar o [formatação de arquivos de dados CSV exportados](/help/destinations/ui/batch-destinations-file-formatting-options.md).
+- [!BADGE Beta]{type=Informative}[Suporte à exportação de conjuntos de dados](/help/destinations/ui/export-datasets.md).
+
+
+**Correções e aprimoramentos** {#destinations-fixes-and-enhancements}
+
+- Corrigimos um problema com o destino do Marketing Cloud (API) Salesforce no qual, na etapa de mapeamento, nem todos os atributos de destino disponíveis eram retornados do Salesforce. Existe agora uma [limite superior de atributos target 2000](/help/destinations/catalog/email-marketing/salesforce-marketing-cloud-exact-target.md#mapping-considerations-example) no Salesforce que pode ser exibido.
+- Corrigimos um problema no destino do Microsoft Dynamics 365. O destino agora oferece suporte ao roteamento regional de dados por meio do [Seletor de região](/help/destinations/catalog/crm/microsoft-dynamics-365.md#authenticate), para que você possa rotear suas exportações de dados dependendo da região em que sua empresa está provisionada no ecossistema do Microsoft. ![Novo seletor de região realçado.](/help/release-notes/2023/assets/region-parameter-microsoft-dynamics-365.png "Novo seletor de região realçado."){width="100" zoomable="yes"}
+
+Para obter informações mais gerais sobre destinos, consulte a [visão geral de destinos](../../destinations/home.md).
 
 ## Serviço de segmentação {#segmentation}
 
