--- a/help/release-notes/2023/july-2023.md
+++ b/help/release-notes/2023/july-2023.md
@@ -1,10 +1,10 @@
 ---
 title: Notas de versão da Adobe Experience Platform
 description: As notas de versão de julho de 2023 para o Adobe Experience Platform.
-source-git-commit: 62a0b6327f1707fcc639a309ae7db5bf0e4c828a
+source-git-commit: 7cc7d43f6424ff91bd237235b278bf13a0add45d
 workflow-type: tm+mt
-source-wordcount: '993'
-ht-degree: 26%
+source-wordcount: '1017'
+ht-degree: 25%
 
 ---
 
@@ -54,16 +54,9 @@ For more information on Data Prep, please read the [Data Prep overview](../../da
 
 **Destinos novos ou atualizados** {#new-updated-destinations}
 
-<!--
-
-LiveRamp commented out until it is officially released tomorrow
-
-| [[!DNL LiveRamp - Onboarding]](../../destinations/catalog/advertising/liveramp-onboarding.md) | New | Onboard identities from Adobe Experience Platform into [!DNL LiveRamp Connect] so that you can target users on mobile, open web, social, and [!DNL CTV] platforms, using the [!DNL Ramp ID] identifier. |
-
--->
-
 | Destino | Novo ou atualizado | Descrição |
 | ----------- |----------------|----------- |
+| [[!DNL LiveRamp - Onboarding]](../../destinations/catalog/advertising/liveramp-onboarding.md) | Novo | Integrar identidades do Adobe Experience Platform no [!DNL LiveRamp Connect] para poder direcionar os usuários em dispositivos móveis, Web aberta, redes sociais e [!DNL CTV] plataformas, usando o [!DNL Ramp ID] identificador. |
 | [[!DNL Azure Data Lake Storage Gen2]](../../destinations/catalog/cloud-storage/adls-gen2.md) | Novo | Criar uma conexão de saída ativa com o [!DNL Azure Data Lake Storage Gen2] para exportar arquivos de dados do Adobe Experience Platform periodicamente para seu próprio local de armazenamento. Esse novo destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]{type=Informative} |
 | [[!DNL Data Landing Zone]](../../destinations/catalog/cloud-storage/data-landing-zone.md) | Novo | [!DNL Data Landing Zone] é um [!DNL Azure Blob] interface de armazenamento de dados provisionada pela Adobe Experience Platform, que concede acesso a um recurso seguro de armazenamento de arquivos baseado em nuvem para exportar arquivos da plataforma. Esse novo destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]{type=Informative} |
 | [[!DNL Google Cloud Storage]](../../destinations/catalog/cloud-storage/google-cloud-storage.md) | Novo | Criar uma conexão de saída ativa com o [!DNL Google Cloud Storage] para exportar arquivos de dados do Adobe Experience Platform periodicamente para seus próprios buckets. Esse novo destino oferece funcionalidade aprimorada de exportação de arquivos e suporte [!BADGE Beta]{type=Informative} |
