Updated by task 'AutomatedMDTask_1690573607217_TM-MT_1690573736232'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/9508265b3813767850ba14c3a84ae240a277297d

--- a/help/release-notes/2023/july-2023.md
+++ b/help/release-notes/2023/july-2023.md
@@ -1,10 +1,10 @@
 ---
 title: Notas de versão da Adobe Experience Platform
 description: As notas de versão de julho de 2023 para o Adobe Experience Platform.
-source-git-commit: 7cc7d43f6424ff91bd237235b278bf13a0add45d
+source-git-commit: a33ecb431a7f2a9c981e34ab3c7521a8168daf65
 workflow-type: tm+mt
-source-wordcount: '1017'
-ht-degree: 25%
+source-wordcount: '1297'
+ht-degree: 30%
 
 ---
 
@@ -14,10 +14,24 @@ ht-degree: 25%
 
 Atualizações dos recursos já existentes na Adobe Experience Platform:
 
+- [Serviço de catálogo](#catalog-service)
 - [Coleção de dados](#data-collection)
 - [Destinos](#data-prep)
+- [Query Service](#query-service)
 - [Serviço de segmentação](#segmentation)
 - [Fontes](#sources)
+
+## Serviço de catálogo {#catalog-service}
+
+O Serviço de catálogo é o sistema de registro para localização e linhagem de dados na Adobe Experience Platform. Embora todos os dados assimilados na Experience Platform sejam armazenados no Data Lake como arquivos e diretórios, o Catálogo retém os metadados e a descrição desses arquivos e diretórios para fins de pesquisa e monitoramento.
+
+| Recurso | Descrição |
+| --- | --- |
+| Gerenciamento de inventário do conjunto de dados | A interface do usuário de conjuntos de dados agora oferece uma coleção de ações em linha para gerenciar melhor seus conjuntos de dados. O gerenciamento avançado de conjuntos de dados melhora a eficiência do seu trabalho por meio da criação e atribuição de pastas e tags aos seus conjuntos de dados, o que permite filtrar e melhorar a capacidade de descoberta. Consulte a documentação para obter mais informações sobre [ações embutidas](../../catalog/datasets/user-guide.md#inline-actions), como [pesquisar e filtrar conjuntos de dados](../../catalog/datasets/user-guide.md#search-and-filter), e [mover conjuntos de dados para pastas](../../catalog/datasets/user-guide.md#move-to-folders). |
+
+{style="table-layout:auto"}
+
+Para obter mais informações sobre o Serviço de Catálogo, consulte [Visão geral do Serviço de catálogo](../../catalog/home.md).
 
 ## Coleção de dados {#data-collection}
 
@@ -83,6 +97,21 @@ A versão de atualização e disponibilidade geral dos seis destinos de armazena
 - Corrigimos um problema no destino do Microsoft Dynamics 365. O destino agora oferece suporte ao roteamento regional de dados por meio do [Seletor de região](/help/destinations/catalog/crm/microsoft-dynamics-365.md#authenticate), para que você possa rotear suas exportações de dados dependendo da região em que sua empresa está provisionada no ecossistema do Microsoft. ![Novo seletor de região realçado.](/help/release-notes/2023/assets/region-parameter-microsoft-dynamics-365.png "Novo seletor de região realçado."){width="100" zoomable="yes"}
 
 Para obter informações mais gerais sobre destinos, consulte a [visão geral de destinos](../../destinations/home.md).
+
+## Query Service {#query-service}
+
+O Query Service permite usar o SQL padrão para consultar dados no data lake da Adobe Experience Platform. É possível unir qualquer conjunto de dados do data lake e capturar os resultados de consultas como um novo conjunto de dados para usar em relatórios, no espaço de trabalho de ciência de dados ou para assimilação no perfil do cliente em tempo real.
+
+**Recursos atualizados**
+
+| Recurso | Descrição |
+| --- | --- |
+| Alternância do Editor de Consulta Aprimorado | O botão aprimorado Editor de consultas oferece melhor acessibilidade e suporte a vários temas. As configurações aprimoradas do editor permitem ativar temas escuros ou claros. Consulte a [documentação da](../../query-service/ui/user-guide.md#enhanced-editor-toggle) para obter mais informações. |
+| Nome de alias para estatísticas calculadas | Agora você pode fornecer um nome de alias para fazer referência descritiva aos resultados de suas estatísticas calculadas em consultas SQL. Consulte a documentação para obter informações sobre esta e outras atualizações do comando COMPUTE STATISTICS. Consulte a [documentação da](../../query-service/essential-concepts/dataset-statistics.md#alias-name) para obter mais informações. |
+
+{style="table-layout:auto"}
+
+Para obter mais informações sobre o Query Service, consulte a [Visão geral do Query Service](../../query-service/home.md).
 
 ## Serviço de segmentação {#segmentation}
 
