Updated by task 'AutomatedMDTask_1690818094318_TM-MT_1690818205900'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/047cc04c27c394c199301699d152d8ecf4dabd5c

--- a/help/release-notes/2023/july-2023.md
+++ b/help/release-notes/2023/july-2023.md
@@ -1,7 +1,7 @@
 ---
 title: Notas de versão da Adobe Experience Platform
 description: As notas de versão de julho de 2023 para o Adobe Experience Platform.
-source-git-commit: a33ecb431a7f2a9c981e34ab3c7521a8168daf65
+source-git-commit: 3090b8a8eade564190dc32142c3fc71701007337
 workflow-type: tm+mt
 source-wordcount: '1297'
 ht-degree: 30%
@@ -16,7 +16,7 @@ Atualizações dos recursos já existentes na Adobe Experience Platform:
 
 - [Serviço de catálogo](#catalog-service)
 - [Coleção de dados](#data-collection)
-- [Destinos](#data-prep)
+- [Destinos](#destinations)
 - [Query Service](#query-service)
 - [Serviço de segmentação](#segmentation)
 - [Fontes](#sources)
@@ -94,7 +94,7 @@ A versão de atualização e disponibilidade geral dos seis destinos de armazena
 **Correções e aprimoramentos** {#destinations-fixes-and-enhancements}
 
 - Corrigimos um problema com o destino do Marketing Cloud (API) Salesforce no qual, na etapa de mapeamento, nem todos os atributos de destino disponíveis eram retornados do Salesforce. Existe agora uma [limite superior de atributos target 2000](/help/destinations/catalog/email-marketing/salesforce-marketing-cloud-exact-target.md#mapping-considerations-example) no Salesforce que pode ser exibido.
-- Corrigimos um problema no destino do Microsoft Dynamics 365. O destino agora oferece suporte ao roteamento regional de dados por meio do [Seletor de região](/help/destinations/catalog/crm/microsoft-dynamics-365.md#authenticate), para que você possa rotear suas exportações de dados dependendo da região em que sua empresa está provisionada no ecossistema do Microsoft. ![Novo seletor de região realçado.](/help/release-notes/2023/assets/region-parameter-microsoft-dynamics-365.png "Novo seletor de região realçado."){width="100" zoomable="yes"}
+- Corrigimos um problema no destino do Microsoft Dynamics 365. O destino agora oferece suporte ao roteamento regional de dados por meio do [Seletor de região](/help/destinations/catalog/crm/microsoft-dynamics-365.md#authenticate), para que você possa rotear suas exportações de dados dependendo da região em que sua empresa está provisionada no ecossistema do Microsoft. <br> ![Novo seletor de região realçado.](/help/release-notes/2023/assets/region-parameter-microsoft-dynamics-365.png "Novo seletor de região realçado."){width="100" zoomable="yes"}
 
 Para obter informações mais gerais sobre destinos, consulte a [visão geral de destinos](../../destinations/home.md).
 
