Updated by task 'AutomatedMDTask_1690936265230_TM-MT_1690936397663'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/c07a9f9b3bd62395392c7401824db96b04a37997

--- a/help/release-notes/2023/july-2023.md
+++ b/help/release-notes/2023/july-2023.md
@@ -1,10 +1,10 @@
 ---
 title: Notas de versão da Adobe Experience Platform
 description: As notas de versão de julho de 2023 para o Adobe Experience Platform.
-source-git-commit: dbd287087d04b10f79c8b6ae441371181d806739
+source-git-commit: d639b0830b88307b249e7da232b3f48b142ad37b
 workflow-type: tm+mt
-source-wordcount: '1365'
-ht-degree: 32%
+source-wordcount: '1800'
+ht-degree: 38%
 
 ---
 
@@ -142,3 +142,41 @@ A Experience Platform fornece uma API RESTful e uma interface interativa que per
 {style="table-layout:auto"}
 
 Para obter mais informações sobre fontes, leia o [visão geral das origens](../../sources/home.md).
+
+## Experience Data Model (XDM) {#xdm}
+
+O XDM é uma especificação de código aberto que fornece estruturas e definições comuns (esquemas) para dados inseridos na Adobe Experience Platform. Ao aderir aos padrões do XDM, todos os dados de experiência do cliente podem ser incorporados em uma representação comum para fornecer insights de maneira mais rápida e integrada. Você pode obter insights valiosos sobre ações de clientes, definir públicos-alvo por meio de segmentos e usar atributos de clientes para fins de personalização.
+
+**Novos componentes de XDM**
+
+| Tipo de componente | Nome | Descrição |
+| --- | --- | --- |
+| Classe | [[!UICONTROL Perfil de cliente potencial individual do XDM]](https://github.com/adobe/xdm/pull/1758/files) | Use esta classe para trazer perfis de prospecto obtidos de casos de uso de aquisição de clientes topo de funil de fornecedores de dados. |
+| Grupo de campos | [[!UICONTROL Detalhes enriquecidos do segmento de evento]](https://github.com/adobe/xdm/pull/1754/files) | Uma lista de públicos para os quais o perfil se qualifica no momento da coleta do evento. |
+
+{style="table-layout:auto"}
+
+**Componentes de XDM atualizados**
+
+| Tipo de componente | Nome | Atualizar descrição |
+| --- | --- | --- |
+| Grupo de campos | [[!UICONTROL Detalhes de interação do MediaAnalytics]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de experimental para `stable`. |
+| Grupo de campos | [[!UICONTROL Detalhes de interação com a mídia]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `stable` para `deprecated`. |
+| Tipo de dados | [[!UICONTROL Informações de detalhes da sessão]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental` para `stable`. |
+| Tipo de dados | [[!UICONTROL Informações detalhadas de dados de QoE]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental` para `stable`. |
+| Tipo de dados | [[!UICONTROL Informações de dados do estado do player]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental`para `stable`. |
+| Tipo de dados | [[!UICONTROL Informações do evento de mídia]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental` para `stable`. |
+| Tipo de dados | [[!UICONTROL Informações de detalhes de mídia]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental` para `stable`. |
+| Tipo de dados | [[!UICONTROL Informações de detalhes do erro]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental` para `stable`. |
+| Tipo de dados | [[!UICONTROL Informações de detalhes do erro]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `stable` para `deprecated`. |
+| Tipo de dados | [[!UICONTROL Informações detalhadas de metadados personalizados]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental` para `stable`. |
+| Tipo de dados | [[!UICONTROL Informações detalhadas do capítulo]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental` para `stable`. |
+| Tipo de dados | [[!UICONTROL Informações detalhadas do Pod de publicidade]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental` para `stable`. |
+| Tipo de dados | [[!UICONTROL Informações de detalhes de publicidade]](https://github.com/adobe/xdm/pull/1756/files) | A variável `meta:status` foi atualizado de `experimental` para `stable`. |
+| Extensão (Gerenciamento de Jornada do cliente) | [[!UICONTROL Domínio]](https://github.com/adobe/xdm/pull/1756/files) | `Domain` campo adicionado a [!UICONTROL Adobe CJM ExperienceEvent - Detalhes do perfil da mensagem] para registrar o domínio do endereço de email do recipient. |
+| Extensão (Gerenciamento de Jornada do cliente) | [[!UICONTROL Nome da variante do canal]](https://github.com/adobe/xdm/pull/1753/files) | Este campo foi adicionado a [!UICONTROL Campos de entidade do AJO] para representar o nome da variante de canal. |
+| Extensão (Adobe Analytics) | [[!UICONTROL Valor de contexto]](https://github.com/adobe/xdm/pull/1761/files) | `Context value` foi adicionado a [!UICONTROL `Adobe Analytics ExperienceEvent Full Extension`]. |
+
+{style="table-layout:auto"}
+
+Para obter mais informações sobre o XDM na Platform, consulte a [Visão geral do sistema de XDM](../../xdm/home.md)
