Updated by task 'AutomatedMDTask_1691167620681_TM-MT_1691167735020'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/9c61dbcfb74c568dab62cefa3e852093f4242ad5

--- a/help/release-notes/2023/may-2023.md
+++ b/help/release-notes/2023/may-2023.md
@@ -1,10 +1,10 @@
 ---
 title: Notas da versão de maio de 2023 da Adobe Experience Platform
 description: As notas de versão de maio de 2023 da Adobe Experience Platform.
-source-git-commit: 871b9448288e11e2e21dfc1471a618fd7cad6c13
-workflow-type: ht
-source-wordcount: '1994'
-ht-degree: 100%
+source-git-commit: b94536be6e92354e237b99d36af13adf5a49afa7
+workflow-type: tm+mt
+source-wordcount: '1993'
+ht-degree: 99%
 
 ---
 
@@ -172,7 +172,7 @@ O Query Service permite usar SQL padrão para consultar dados no [!DNL data lake
 
 | Recurso | Descrição |
 | --- | --- |
-| Calcular estatísticas em nível de coluna nos conjuntos de dados ADLS | O comando `ANALYZE TABLE` recebeu dois comandos de SQL adicionais: `COMPUTE STATISTICS` e `SHOW STATISTICS`. Agora é possível calcular estatísticas para um subconjunto de um conjunto de dados ADLS ou para determinadas colunas nesse conjunto de dados. Para obter mais informações, leia o [guia de computação de estatísticas do conjunto de dados](../../query-service/essential-concepts/dataset-statistics.md). |
+| Calcular estatísticas em nível de coluna nos conjuntos de dados ADLS | A variável `ANALYZE TABLE` foi estendido com o `COMPUTE STATISTICS` Comando SQL. Agora é possível calcular estatísticas para um subconjunto de um conjunto de dados ADLS ou para determinadas colunas nesse conjunto de dados. Para obter mais informações, leia o [guia de computação de estatísticas do conjunto de dados](../../query-service/essential-concepts/dataset-statistics.md). |
 
 {style="table-layout:auto"}
 
