--- a/help/release-notes/2023/june-2023.md
+++ b/help/release-notes/2023/june-2023.md
@@ -2,9 +2,9 @@
 title: Notas de versão da Adobe Experience Platform
 description: As notas de versão de junho de 2023 da Adobe Experience Platform.
 source-git-commit: 0aafba9c2887e39f983c354a73d5544f3b0e681f
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '1538'
-ht-degree: 60%
+ht-degree: 100%
 
 ---
 
@@ -77,57 +77,57 @@ Para obter informações mais gerais sobre destinos, consulte a [visão geral de
 
 ## Experience Data Model (XDM) {#xdm}
 
-O XDM é uma especificação de código aberto que fornece estruturas e definições comuns (esquemas) para dados trazidos para o Adobe Experience Platform. Seguindo os padrões XDM, todos os dados de experiência do cliente podem ser incorporados a uma representação comum para fornecer insights de maneira mais rápida e integrada. Você pode obter insights valiosos das ações do cliente, definir públicos do cliente por meio de segmentos e usar atributos do cliente para fins de personalização.
+O XDM é uma especificação de código aberto que fornece estruturas e definições comuns (esquemas) para dados inseridos na Adobe Experience Platform. Ao aderir aos padrões do XDM, todos os dados de experiência do cliente podem ser incorporados em uma representação comum para fornecer insights de maneira mais rápida e integrada. Você pode obter insights valiosos sobre ações de clientes, definir públicos-alvo por meio de segmentos e usar atributos de clientes para fins de personalização.
 
-**Novos componentes XDM**
+**Novos componentes de XDM**
 
 | Tipo de componente | Nome | Descrição |
 | --- | --- | --- |
-| Extensão (Prospecto-Perfil) | [[!UICONTROL Extensão de União de Perfil de Cliente Potencial do Adobe Unified Profile Service]](https://github.com/adobe/xdm/pull/1735/files) | Adição dos campos obrigatórios para o esquema de união Prospect-Profile. |
-| Extensão | [[!UICONTROL Ativo de decisão]](https://github.com/adobe/xdm/pull/1732/files) | Adicione um tipo de dados para representar ativos usados na decisão. [!UICONTROL Ativo de decisão] fornece uma referência aos ativos usados para renderizar o `decisionItems`. |
-| Tipo de dados | [[!UICONTROL Comércio]](https://github.com/adobe/xdm/pull/1747/files) | [!UICONTROL Commerce] armazena registros relacionados à atividade de compra e venda. |
-| Grupo de campos | [[!UICONTROL Enriquecimento do parceiro de perfil (amostra)]](https://github.com/adobe/xdm/pull/1747/files) | Um exemplo de esquema foi adicionado para enriquecimento do parceiro de perfil. |
-| Grupo de campos | [[!UICONTROL Detalhes de Cliente Potencial do Parceiro (Exemplo)]](https://github.com/adobe/xdm/pull/1747/files) | Um exemplo de esquema foi adicionado para extensões de perfil de cliente potencial do fornecedor de dados. |
-| Tipo de dados | [[!UICONTROL Escopo do Commerce]](https://github.com/adobe/xdm/pull/1747/files) | [!UICONTROL Escopo do Commerce] identifica onde um evento ocorreu. Por exemplo, na exibição de loja, loja ou site e assim por diante. |
-| Tipo de dados | [[!UICONTROL Faturamento]](https://github.com/adobe/xdm/pull/1734/files) | Informações de faturamento, para um ou mais pagamentos, foram adicionadas à [!UICONTROL Commerce] esquema. |
+| Extensão (Perfil em potencial) | [[!UICONTROL Extensão de união de perfil em potencial do Serviço de perfil unificado da Adobe]](https://github.com/adobe/xdm/pull/1735/files) | Campos obrigatórios adicionados para o esquema de união de perfil em potencial. |
+| Extensão | [[!UICONTROL Ativo de decisão]](https://github.com/adobe/xdm/pull/1732/files) | Adicione um tipo de dados para representar ativos usados na decisão. O [!UICONTROL Ativo de decisão] fornece uma referência aos ativos usados para renderizar os `decisionItems`. |
+| Tipo de dados | [[!UICONTROL Comércio]](https://github.com/adobe/xdm/pull/1747/files) | O [!UICONTROL Comércio] armazena registros relacionados à atividade de compra e venda. |
+| Grupo de campos | [[!UICONTROL Enriquecimento do parceiro de perfil (amostra)]](https://github.com/adobe/xdm/pull/1747/files) | Um esquema de amostra foi adicionado para o enriquecimento do parceiro de perfil. |
+| Grupo de campos | [[!UICONTROL Detalhes do parceiro em potencial (amostra)]](https://github.com/adobe/xdm/pull/1747/files) | Um esquema de amostra foi adicionado para extensões do perfil do fornecedor de dados em potencial. |
+| Tipo de dados | [[!UICONTROL Escopo do comércio]](https://github.com/adobe/xdm/pull/1747/files) | O [!UICONTROL Escopo do comércio] identifica onde um evento ocorreu. Por exemplo, na exibição da loja, na própria loja, no site e assim por diante. |
+| Tipo de dados | [[!UICONTROL Faturamento]](https://github.com/adobe/xdm/pull/1734/files) | Foram adicionadas informações de faturamento para um ou mais pagamentos no esquema [!UICONTROL Comércio]. |
 
 {style="table-layout:auto"}
 
-**Componentes XDM atualizados**
+**Componentes de XDM atualizados**
 
 | Tipo de componente | Nome | Atualizar descrição |
 | --- | --- | --- |
-| Grupo de campos | [[!UICONTROL Detalhes de interação do MediaAnalytics]](https://github.com/adobe/xdm/pull/1736/files) | Alterado `bitrateAverageBucket` de 100 a &quot;800-899&quot;. |
-| Tipo de dados | [[!UICONTROL Informações detalhadas de Dados de Qoe]](https://github.com/adobe/xdm/pull/1736/files) | Alterado `bitrateAverageBucket` tipo de dados para string. |
-| Grupo de campos | [[!UICONTROL Detalhes da associação do segmento]](https://github.com/adobe/xdm/pull/1735/files) | Adicionado à classe Perfil de cliente potencial. |
-| Esquema | [[!UICONTROL Esquema de Sistema de Atributos Calculados]](https://github.com/adobe/xdm/pull/1735/files) | Mapa de identidade adicionado à [!UICONTROL Esquema de Sistema de Atributos Calculados]. |
-| Tipo de dados | [[!UICONTROL Rede de entrega de conteúdo]](https://github.com/adobe/xdm/pull/1733/files) | Campo adicionado a [!UICONTROL Informações de detalhes da sessão] para descrever a rede de entrega de conteúdo usada. |
-| Extensão | [[!UICONTROL Extensão de União da Conta de Serviço de Perfil Unificado do Adobe]](https://github.com/adobe/xdm/pull/1731/files) | Mapa de identidade adicionado à [!UICONTROL Extensão de União da Conta de Serviço de Perfil Unificado do Adobe]. |
-| Tipo de dados | [[!UICONTROL Pedido]](https://github.com/adobe/xdm/pull/1730/files) | `discountAmount` foi adicionado a [!UICONTROL Pedido]. Isso transmite a diferença entre o preço normal do pedido e o preço especial. Ele é aplicado a todo o pedido em vez de produtos individuais. |
-| Esquema | [[!UICONTROL Solicitação de operação de limpeza da AEP]](https://github.com/adobe/xdm/pull/1728/files) | A variável `targetServices` O campo foi adicionado para fornecer os nomes dos serviços que processam as operações de higiene de dados. |
-| Tipo de dados | [[!UICONTROL Envio]](https://github.com/adobe/xdm/pull/1727/files) | `currencyCode` foi adicionado às informações de remessa de um ou mais produtos. É um código de moeda ISO 4217 alfabético usado para definir o preço do produto. |
-| Tipo de dados | [[!UICONTROL Aplicativo]](https://github.com/adobe/xdm/pull/1726/files) | A variável `language` O campo foi adicionado para fornecer as preferências linguísticas, geográficas ou culturais do usuário para o aplicativo. |
-| Extensão | [[!UICONTROL Campos de entidade do AJO]](https://github.com/adobe/xdm/pull/1746/files) | [!UICONTROL Entidade de carimbo de data e hora do AJO] foi adicionado para indicar a hora em que a mensagem foi modificada pela última vez. |
-| Tipo de dados | (Múltiplos) | [Remoção de vários detalhes de mídia](https://github.com/adobe/xdm/pull/1739/files) em vários tipos de dados para fins de consistência. |
+| Grupo de campos | [[!UICONTROL Detalhes de interação do MediaAnalytics]](https://github.com/adobe/xdm/pull/1736/files) | `bitrateAverageBucket` foi alterado de 100 para “800-899”. |
+| Tipo de dados | [[!UICONTROL Informações detalhadas de dados de QoE]](https://github.com/adobe/xdm/pull/1736/files) | O tipo de dados de `bitrateAverageBucket` foi alterado para string. |
+| Grupo de campos | [[!UICONTROL Detalhes da associação de segmento]](https://github.com/adobe/xdm/pull/1735/files) | Adicionado à classe Perfil em potencial. |
+| Esquema | [[!UICONTROL Esquema do sistema de atributos calculados]](https://github.com/adobe/xdm/pull/1735/files) | Mapa de identidade adicionado ao [!UICONTROL Esquema do sistema de atributos calculados]. |
+| Tipo de dados | [[!UICONTROL Rede de entrega de conteúdo]](https://github.com/adobe/xdm/pull/1733/files) | Campo adicionado às [!UICONTROL Informações detalhadas da sessão] para descrever a rede de entrega de conteúdo usada. |
+| Extensão | [[!UICONTROL Extensão de união de conta do Serviço de perfil unificado da Adobe]](https://github.com/adobe/xdm/pull/1731/files) | Mapa de identidade adicionado à [!UICONTROL Extensão de união de conta do Serviço de perfil unificado da Adobe]. |
+| Tipo de dados | [[!UICONTROL Pedido]](https://github.com/adobe/xdm/pull/1730/files) | `discountAmount` foi adicionado ao [!UICONTROL Pedido]. Isso informa a diferença entre o preço normal do pedido e o preço especial. É aplicado ao pedido inteiro em vez de produtos individuais. |
+| Esquema | [[!UICONTROL Solicitação de operação de higiene da AEP]](https://github.com/adobe/xdm/pull/1728/files) | O campo `targetServices` foi adicionado para fornecer os nomes dos serviços que processam as operações de higiene de dados. |
+| Tipo de dados | [[!UICONTROL Envio]](https://github.com/adobe/xdm/pull/1727/files) | `currencyCode` foi adicionado às informações de envio de um ou mais produtos. É um código de moeda alfabético ISO 4217 usado para definir o preço do produto. |
+| Tipo de dados | [[!UICONTROL Aplicativo]](https://github.com/adobe/xdm/pull/1726/files) | O campo `language` foi adicionado para fornecer as preferências linguísticas, geográficas ou culturais do usuário para o aplicativo. |
+| Extensão | [[!UICONTROL Campos de entidade do AJO]](https://github.com/adobe/xdm/pull/1746/files) | A [!UICONTROL Entidade de carimbo de data/hora do AJO] foi adicionada para indicar a hora em que a mensagem foi modificada pela última vez. |
+| Tipo de dados | (Vários) | [Remoção de vários detalhes de mídia](https://github.com/adobe/xdm/pull/1739/files) em vários tipos de dados para fins de consistência. |
 
 {style="table-layout:auto"}
 
-Para obter mais informações sobre o XDM na Platform, consulte a [Visão geral do sistema XDM](../../xdm/home.md)
+Para obter mais informações sobre o XDM na Platform, consulte a [Visão geral do sistema de XDM](../../xdm/home.md)
 
 ## Query Service {#query-service}
 
-O Query Service permite usar o SQL padrão para consultar dados no data lake da Adobe Experience Platform. Você pode unir qualquer conjunto de dados do data lake e capturar os resultados da consulta como um novo conjunto de dados para usar em relatórios, no Data Science Workspace ou para assimilação no Perfil do cliente em tempo real.
+O Query Service permite usar o SQL padrão para consultar dados no data lake da Adobe Experience Platform. É possível unir qualquer conjunto de dados do data lake e capturar os resultados de consultas como um novo conjunto de dados para usar em relatórios, no espaço de trabalho de ciência de dados ou para assimilação no perfil do cliente em tempo real.
 
 **Recursos atualizados**
 
 | Recurso | Descrição |
 | --- | --- |
-| Modelos integrados | O Serviço de consulta agora oferece suporte ao uso de modelos que fazem referência a outros modelos no SQL. Reduza a carga de trabalho e evite erros aproveitando os modelos em linha em suas consultas. É possível reutilizar instruções ou condições e fazer referência a modelos aninhados para obter maior flexibilidade no SQL. Não há limite no tamanho das consultas que podem ser armazenadas como modelos ou no número de modelos que podem ser referenciados a partir da consulta original. Para obter mais informações, leia o [manual de modelo em linha](../../query-service/essential-concepts/inline-templates.md). |
-| Atualizações da interface de consulta programada | Gerencie todas as consultas programadas de um local na interface do usuário com o [[!UICONTROL Guia Consultas programadas]](../../query-service/ui/monitor-queries.md#inline-actions). A interface [!UICONTROL Consultas programadas] foi aprimorada com a adição de ações de consulta em linha e a nova coluna Status de consulta. As adições recentes incluem a capacidade de habilitar, desabilitar e excluir uma programação ou assinar os alertas de execuções de consultas futuras diretamente da visualização [!UICONTROL Consultas programadas]. <p>![Ações em linha destacadas na visualização [!UICONTROL Consultas programadas].](../../query-service/images/ui/monitor-queries/disable-inline.png "Ações em linha destacadas na visualização [!UICONTROL Consultas programadas]."){width="100" zoomable="yes"}</p> |
+| Modelos em linha | O Query Service agora oferece suporte ao uso de modelos que fazem referência a outros modelos no SQL. Reduza a carga de trabalho e evite erros aproveitando os modelos em linha em suas consultas. É possível reutilizar instruções ou condições e fazer referência a modelos aninhados para obter maior flexibilidade no SQL. Não há limite no tamanho das consultas que podem ser armazenadas como modelos ou no número de modelos que podem ser referenciados a partir da consulta original. Para obter mais informações, leia o [manual de modelos em linha](../../query-service/essential-concepts/inline-templates.md). |
+| Atualizações da interface de consulta programada | Gerencie todas as consultas programadas de um único local na interface com a [[!UICONTROL guia Consultas programadas]](../../query-service/ui/monitor-queries.md#inline-actions). A interface [!UICONTROL Consultas programadas] foi aprimorada com a adição de ações de consulta em linha e a nova coluna Status de consulta. As adições recentes incluem a capacidade de habilitar, desabilitar e excluir uma programação ou assinar os alertas de execuções de consultas futuras diretamente da visualização [!UICONTROL Consultas programadas]. <p>![Ações em linha destacadas na visualização [!UICONTROL Consultas programadas].](../../query-service/images/ui/monitor-queries/disable-inline.png "Ações em linha destacadas na visualização [!UICONTROL Consultas programadas]."){width="100" zoomable="yes"}</p> |
 
 {style="table-layout:auto"}
 
-Para obter mais informações sobre o Serviço de consulta, consulte [Visão geral do Serviço de consulta](../../query-service/home.md).
+Para obter mais informações sobre o Query Service, consulte a [Visão geral do Query Service](../../query-service/home.md).
 
 ## Fontes {#sources}
 
