--- a/help/release-notes/2023/june-2023.md
+++ b/help/release-notes/2023/june-2023.md
@@ -2,7 +2,7 @@
 title: Notas de versão da Adobe Experience Platform
 description: As notas de versão de junho de 2023 da Adobe Experience Platform.
 source-git-commit: 0aafba9c2887e39f983c354a73d5544f3b0e681f
-workflow-type: ht
+workflow-type: tm+mt
 source-wordcount: '1538'
 ht-degree: 100%
 
