Updated by task 'AutomatedMDTask_1692857030405_TM-MT_1692857114477'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/58037e45ddc70911654442e36013ce980bcba783

--- a/help/release-notes/2023/july-2023.md
+++ b/help/release-notes/2023/july-2023.md
@@ -1,9 +1,9 @@
 ---
 title: Notas de versão da Adobe Experience Platform
 description: As notas de versão de julho de 2023 para o Adobe Experience Platform.
-source-git-commit: d639b0830b88307b249e7da232b3f48b142ad37b
+source-git-commit: 49a04ffa059a73678cec10d2475a83e137ecb603
 workflow-type: tm+mt
-source-wordcount: '1800'
+source-wordcount: '1804'
 ht-degree: 38%
 
 ---
@@ -21,6 +21,7 @@ Atualizações dos recursos já existentes na Adobe Experience Platform:
 - [Query Service](#query-service)
 - [Serviço de segmentação](#segmentation)
 - [Fontes](#sources)
+- [Experience Data Model (XDM)](#xdm)
 
 ## Serviço de catálogo {#catalog-service}
 
@@ -180,3 +181,4 @@ O XDM é uma especificação de código aberto que fornece estruturas e definiç
 {style="table-layout:auto"}
 
 Para obter mais informações sobre o XDM na Platform, consulte a [Visão geral do sistema de XDM](../../xdm/home.md)
+
