Updating Old File for core commit 9fe30550f4e71cb5d6c5a84f5c863099cd326487

--- a/help/release-notes/2023/may-2023.md
+++ b/help/release-notes/2023/may-2023.md
@@ -2,9 +2,9 @@
 title: Notas da versão de maio de 2023 da Adobe Experience Platform
 description: As notas de versão de maio de 2023 da Adobe Experience Platform.
 source-git-commit: b94536be6e92354e237b99d36af13adf5a49afa7
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '1993'
-ht-degree: 99%
+ht-degree: 100%
 
 ---
 
@@ -36,7 +36,7 @@ Atualizações dos recursos já existentes na Adobe Experience Platform:
 - [Experience Data Model (XDM)](#xdm)
 - [Identity Service](#identity-service)
 - [Query Service](#query-service)
-- [Fontes](#sources)
+- [Origens](#sources)
 
 ## Painéis {#dashboards}
 
@@ -172,13 +172,13 @@ O Query Service permite usar SQL padrão para consultar dados no [!DNL data lake
 
 | Recurso | Descrição |
 | --- | --- |
-| Calcular estatísticas em nível de coluna nos conjuntos de dados ADLS | A variável `ANALYZE TABLE` foi estendido com o `COMPUTE STATISTICS` Comando SQL. Agora é possível calcular estatísticas para um subconjunto de um conjunto de dados ADLS ou para determinadas colunas nesse conjunto de dados. Para obter mais informações, leia o [guia de computação de estatísticas do conjunto de dados](../../query-service/essential-concepts/dataset-statistics.md). |
+| Calcular estatísticas em nível de coluna nos conjuntos de dados ADLS | O comando `ANALYZE TABLE` foi ampliado com o comando SQL `COMPUTE STATISTICS`. Agora é possível calcular estatísticas para um subconjunto de um conjunto de dados ADLS ou para determinadas colunas nesse conjunto de dados. Para obter mais informações, leia o [guia de computação de estatísticas do conjunto de dados](../../query-service/essential-concepts/dataset-statistics.md). |
 
 {style="table-layout:auto"}
 
 Para saber mais sobre o Query Service, leia a [Visão geral do Query Service](../../query-service/home.md).
 
-## Fontes {#sources}
+## Origens {#sources}
 
 A Adobe Experience Platform pode assimilar dados de fontes externas e permite estruturar, rotular e aprimorar esses dados usando os serviços da Platform. É possível assimilar dados de várias fontes, como aplicativos da Adobe, armazenamento na nuvem, software de terceiros e seu sistema de CRM.
 
