Updated by task 'AUTO_TM_MT_1694456036999'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/dc36d36728549a39368482c31ac38752557ce137

--- a/help/release-notes/2022/june-2022.md
+++ b/help/release-notes/2022/june-2022.md
@@ -2,10 +2,10 @@
 title: Notas de versão da Adobe Experience Platform de junho de 2022
 description: As notas de versão de junho de 2022 da Adobe Experience Platform.
 exl-id: 44f5ca11-f5c0-4e86-98b2-9564e3a5ca3d
-source-git-commit: 3d0f2823dcf63f25c3136230af453118c83cdc7e
+source-git-commit: 139d6a6632532b392fdf8d69c5c59d1fd779a6d1
 workflow-type: tm+mt
-source-wordcount: '1845'
-ht-degree: 13%
+source-wordcount: '1846'
+ht-degree: 25%
 
 ---
 
@@ -20,7 +20,7 @@ Atualizações dos recursos já existentes na Adobe Experience Platform:
 - [Coleção de dados](#data-collection)
 - [Experience Data Model (XDM)](#xdm)
 - [Query Service](#query-service)
-- [Fontes](#sources)
+- [Origens](#sources)
 
 ## [!DNL Data Science Workspace] {#dsw}
 
@@ -70,7 +70,7 @@ A Adobe Experience Platform fornece um conjunto de tecnologias que permitem cole
 
 | Recurso | Descrição |
 | --- | --- |
-| [Configuração do tipo de acesso para fluxos de dados](../../datastreams/overview.md#create) | Ao criar um novo fluxo de dados, agora é possível selecionar o tipo de solicitações que a Rede de borda deve aceitar: <ul><li>**[!UICONTROL Autenticação mista]**: quando essa opção é selecionada, a Rede de borda aceita solicitações autenticadas e não autenticadas. Selecione esta opção quando planejar usar o SDK da Web ou [SDK móvel](https://aep-sdks.gitbook.io/docs/), juntamente com o [API do servidor](../../server-api/overview.md). </li><li>**[!UICONTROL Somente autenticado]**: quando essa opção é selecionada, a Rede de borda aceita somente solicitações autenticadas. Selecione esta opção quando planejar usar somente a API do servidor e quiser impedir que qualquer solicitação não autenticada seja processada pela [!DNL Edge Network]. </li></ul> |
+| [Configuração do tipo de acesso para fluxos de dados](../../datastreams/overview.md#create) | Ao criar um novo fluxo de dados, agora é possível selecionar o tipo de solicitações que a Rede de borda deve aceitar: <ul><li>**[!UICONTROL Autenticação mista]**: quando essa opção é selecionada, a rede de borda aceita solicitações autenticadas e não autenticadas. Selecione esta opção quando desejar usar o SDK da Web ou [SDK móvel](https://developer.adobe.com/client-sdks/documentation/) juntamente com a [API do servidor](../../server-api/overview.md). </li><li>**[!UICONTROL Somente autenticado]**: quando essa opção é selecionada, a rede de borda aceita somente solicitações autenticadas. Selecione esta opção quando planejar usar somente a API do servidor e quiser impedir que qualquer solicitação não autenticada seja processada pela [!DNL Edge Network]. </li></ul> |
 | [Renderizar apresentações](../../edge/personalization/rendering-personalization-content.md#applypropositions) em aplicativos de página única sem incremento de métricas. | Os novos `applyPropositions` permite renderizar ou executar uma matriz de propostas de [!DNL Target] em aplicativos de página única, sem incrementar o [!DNL Analytics] e [!DNL Target] métricas. Isso aumenta a precisão dos relatórios. |
 | [Compartilhamento de ID de dispositivo móvel para Web e entre domínios](../../edge/identity/id-sharing.md) | O SDK da Web da Adobe Experience Platform agora oferece suporte a recursos de compartilhamento de ID de visitante que permitem fornecer experiências personalizadas com mais precisão, entre aplicativos móveis e conteúdo da Web móvel e entre domínios. |
 | [Extensão de tag da Camada de dados do Google](../../tags/extensions/client/google-data-layer/overview.md) | A extensão Camada de dados da Google permite usar uma camada de dados da Google na implementação de tags. |
@@ -81,9 +81,9 @@ Para obter mais informações, consulte [visão geral da coleção de dados](../
 
 ## Experience Data Model (XDM) {#xdm}
 
-O XDM é uma especificação de código aberto que fornece estruturas e definições comuns (esquemas) para dados trazidos para o Adobe Experience Platform. Seguindo os padrões XDM, todos os dados de experiência do cliente podem ser incorporados a uma representação comum para fornecer insights de maneira mais rápida e integrada. Você pode obter insights valiosos das ações do cliente, definir públicos do cliente por meio de segmentos e usar atributos do cliente para fins de personalização.
+O XDM é uma especificação de código aberto que fornece estruturas e definições comuns (esquemas) para dados inseridos na Adobe Experience Platform. Ao aderir aos padrões do XDM, todos os dados de experiência do cliente podem ser incorporados em uma representação comum para fornecer insights de maneira mais rápida e integrada. Você pode obter insights valiosos sobre ações de clientes, definir públicos-alvo por meio de segmentos e usar atributos de clientes para fins de personalização.
 
-**Novos componentes XDM**
+**Novos componentes de XDM**
 
 | Tipo de componente | Nome | Descrição |
 | --- | --- | --- |
@@ -105,23 +105,23 @@ O XDM é uma especificação de código aberto que fornece estruturas e definiç
 
 {style="table-layout:auto"}
 
-**Componentes XDM atualizados**
+**Componentes de XDM atualizados**
 
 | Tipo de componente | Nome | Atualizar descrição |
 | --- | --- | --- |
 | Comportamento | [[!UICONTROL Esquema de série temporal]](https://github.com/adobe/xdm/blob/master/components/behaviors/time-series.schema.json) | Adição de um tipo de evento de atualização de estados de mídia. |
 | Grupo de campos | [[!UICONTROL Reserva de acomodação]](https://github.com/adobe/xdm/blob/master/components/fieldgroups/experience-event/industry-verticals/experienceevent-lodging-reservation.schema.json) | Adição de uma propriedade de check-out de hospedagem. |
-| Tipo de dados | [[!UICONTROL Informações da mídia]](https://github.com/adobe/xdm/blob/master/components/datatypes/media.schema.json) | Adição de campos de início de estados e término de estados. |
+| Tipo de dados | [[!UICONTROL Informações de mídia]](https://github.com/adobe/xdm/blob/master/components/datatypes/media.schema.json) | Adição de campos de início de estados e término de estados. |
 | Extensão | [[!UICONTROL Evento de alteração do Workfront]](https://github.com/adobe/xdm/blob/master/extensions/adobe/experience/workfront/changeevent.schema.json) | Foram adicionados dois campos usados para armazenar atributos para ajudar a identificar o usuário e a hora de um evento de criação. |
 | Extensão | [[!UICONTROL Adobe CJM ExperienceEvent - Detalhes de interação da mensagem]](https://github.com/adobe/xdm/blob/master/extensions/adobe/experience/customerJourneyManagement/message-interaction.schema.json) | Inclusão de assinatura, consentimento, email personalizado e informações de dados adicionais no objeto da página de aterrissagem. |
 
 {style="table-layout:auto"}
 
-Para obter mais informações sobre o XDM na Platform, consulte a [Visão geral do sistema XDM](../../xdm/home.md).
+Para obter mais informações sobre o XDM na Platform, consulte a [Visão geral do sistema de XDM](../../xdm/home.md).
 
 ## Query Service {#query-service}
 
-O Serviço de consulta permite usar o SQL padrão para consultar dados no Adobe Experience Platform [!DNL Data Lake]. Você pode associar qualquer conjunto de dados da [!DNL Data Lake] e capture os resultados da consulta como um novo conjunto de dados para usar em relatórios, no Data Science Workspace ou para assimilação no Perfil do cliente em tempo real.
+O Query Service permite usar SQL padrão para consultar dados no [!DNL Data Lake] da Adobe Experience Platform. Você pode associar qualquer conjunto de dados da [!DNL Data Lake] e capture os resultados da consulta como um novo conjunto de dados para usar em relatórios, no Data Science Workspace ou para assimilação no Perfil do cliente em tempo real.
 
 **Recursos atualizados**
 
@@ -132,11 +132,11 @@ O Serviço de consulta permite usar o SQL padrão para consultar dados no Adobe 
 
 {style="table-layout:auto"}
 
-Para obter mais informações sobre os Serviços de consulta, consulte [Visão geral do Serviço de consulta](../../query-service/home.md).
+Para obter mais informações sobre o Query Service, acesse a [Visão geral do Query Service](../../query-service/home.md).
 
-## Fontes {#sources}
+## Origens {#sources}
 
-O Adobe Experience Platform pode assimilar dados de fontes externas e, ao mesmo tempo, estruturar, rotular e aprimorar esses dados usando os serviços da plataforma. Você pode assimilar dados de várias fontes, como aplicativos Adobe, armazenamento baseado em nuvem, software de terceiros e seu sistema de CRM.
+O Adobe Experience Platform pode assimilar dados de fontes externas e, ao mesmo tempo, estruturar, rotular e aprimorar esses dados usando os serviços da plataforma. É possível assimilar dados de várias origens, como aplicativos da Adobe, do armazenamento na nuvem, um software de terceiros e do seu sistema de CRM.
 
 A Experience Platform fornece uma API RESTful e uma interface interativa que permite configurar conexões de origem para vários provedores de dados com facilidade. Essas conexões de origem permitem autenticar e conectar a sistemas de armazenamento externos e serviços de CRM, definir períodos para execuções de assimilação e gerenciar a taxa de transferência de assimilação de dados.
 
