--- a/help/release-notes/2023/may-2023.md
+++ b/help/release-notes/2023/may-2023.md
@@ -1,10 +1,10 @@
 ---
 title: Notas da versão de maio de 2023 da Adobe Experience Platform
 description: As notas de versão de maio de 2023 da Adobe Experience Platform.
-source-git-commit: b94536be6e92354e237b99d36af13adf5a49afa7
-workflow-type: ht
+source-git-commit: f65783c7b000aea1e358ec2d9f921e678e456745
+workflow-type: tm+mt
 source-wordcount: '1993'
-ht-degree: 100%
+ht-degree: 97%
 
 ---
 
@@ -124,7 +124,7 @@ Para saber mais sobre assimilação de dados, leia a [visão geral da assimilaç
 | ----------- | ----------- |
 | Disponibilidade geral da personalização baseada em atributos por meio dos destinos do [Adobe Target](../../destinations/catalog/personalization/adobe-target-connection.md) e da [Personalização individual](../../destinations/catalog/personalization/custom-personalization.md). | Aproveite os atributos de perfil em tempo real para oferecer uma personalização individual na Web e em dispositivos móveis, utilizando o Adobe Target ou outros destinos de personalização individual da Experience Platform. Leia a [documentação dedicada](../../destinations/ui/activate-edge-personalization-destinations.md) e as [perguntas frequentes](/help/destinations/destinations-faq.md#same-next-page-personalization) para obter mais detalhes. |
 | Suporte ao Destination SDK para agrupar públicos-alvo exportados com base na política de mesclagem. | Ao criar um destino baseado em arquivo com o Destination SDK, agora é possível configurar o agrupamento de públicos-alvo exportados em um ou vários arquivos, com base na política de mesclagem. <br><br> Além disso, agora você pode incluir a ID e o nome da política de mesclagem nos nomes dos arquivos exportados, usando as macros de modelo dedicadas. <br><br>Consulte a [documentação de configuração em lote](../../destinations/destination-sdk/functionality/destination-configuration/batch-configuration.md) para obter mais detalhes sobre como usar o parâmetro `segmentGroupingEnabled` e as novas macros de modelo de nome de arquivo. |
-| Incluir arquivo de manifesto em exportações para destinos beta de armazenamento na nuvem | Agora é possível incluir um arquivo JSON de manifesto que contenha informações sobre o local de exportação, o tamanho da exportação e muito mais ao exportar dados para os seis destinos beta de armazenamento na nuvem: [(Beta) Amazon S3](/help/destinations/catalog/cloud-storage/amazon-s3.md), [(Beta) Azure Blob](/help/destinations/catalog/cloud-storage/azure-blob.md), [(Beta) Azure Data Lake Storage Gen2](/help/destinations/catalog/cloud-storage/adls-gen2.md), [(Beta) Data Landing Zone](/help/destinations/catalog/cloud-storage/data-landing-zone.md), [(Beta) Google Cloud Storage](/help/destinations/catalog/cloud-storage/google-cloud-storage.md) e [(Beta) SFTP](/help/destinations/catalog/cloud-storage/sftp.md). <br><br> Obtenha mais informações na seção **[!UICONTROL Detalhes do destino]** das páginas vinculadas acima. |
+| Incluir arquivo de manifesto em exportações para destinos beta de armazenamento na nuvem | Agora é possível incluir um arquivo JSON de manifesto que contenha informações sobre o local de exportação, o tamanho da exportação e muito mais, ao exportar dados para os seis destinos beta do armazenamento na nuvem - [(Beta) Amazon S3](/help/destinations/catalog/cloud-storage/amazon-s3.md), [(Beta) Azure Blob](/help/destinations/catalog/cloud-storage/azure-blob.md), [(Beta) Armazenamento do Azure Data Lake Gen2](/help/destinations/catalog/cloud-storage/adls-gen2.md), [(Beta) Zona de aterrissagem de dados](/help/destinations/catalog/cloud-storage/data-landing-zone.md), [(Beta) Armazenamento em nuvem do Google](/help/destinations/catalog/cloud-storage/google-cloud-storage.md), [(Beta) SFTP](/help/destinations/catalog/cloud-storage/sftp.md). <br><br> Obtenha mais informações na seção **[!UICONTROL Detalhes do destino]** das páginas vinculadas acima. |
 
 {style="table-layout:auto"}
 
